--- a/PhotoGallery/app/src/main/res/values/strings.xml
+++ b/PhotoGallery/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">PhotoGallery</string>
     <string name="search">Search</string>
     <string name="clear_search">Clear search</string>
+    <string name="start_polling">Start polling</string>
+    <string name="stop_polling">Stop polling</string>
+    <string name="new_pic_title">New pictures</string>
+    <string name="new_pic_text">You have new pictures in PhotoGallery.</string>
 </resources>
